--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@
     width: 50%;
     padding: 10px;
 }
-
+/* Button Index */
 .button1{ background-color: rgb(255, 234, 0);
   border: none;
   color: rgb(70, 70, 69);
@@ -78,7 +78,7 @@
         transform: translateY(4px);
     }
 
-
+/* Anderen Buttons */
     .btn{ background-color:rgb(0, 0, 0);
         border: none;
         color: rgb(240, 138, 216);
@@ -106,7 +106,7 @@
         transform: translate(-50%,150%);
     }
     .btn:hover {
-        background-color: rgb(255, 0, 197);
+        background-color: rgb(240, 138, 216);
         color: rgb(0, 0, 0);
     }
     .button:active{
@@ -136,4 +136,14 @@ h1{
     text-align: center;
     color: white;
     font-size: 70px;
+}
+
+@media (max-width: 600px) {
+    .menu {display: none}
+    .content {width: 100%}
+}
+@media (max-width: 768px) {
+  .button-container {
+    flex-direction: column; /* Buttons untereinander */
+    align-items: center;}
 }
