--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@
     background-image: url(blumen.JPG);
 }
 
+.linkSix{
+    background-image: url(walk.jpg);
+}
+
 .start{
     background-image: url(Gänseblümchen.jpg);
     background-size:cover;
