--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,10 @@
     background-image: url(walk.jpg);
 }
 
+.linkSix{
+    background-image: url(walk.jpg);
+}
+
 .linkFive{
     background-image: url(blumen.JPG);
 }
