--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
     background-size:cover;
 }
 
-.linkFive, .linkFour, .linkOne, .linkThree, .linkTwo{
+.linkFive, .linkFour, .linkOne, .linkThree, .linkTwo, .linkSix{
     background-color: black;
     background-size: 1000px, 800px;
     background-repeat: no-repeat;
