--- a/styles.css
+++ b/styles.css
@@ -96,11 +96,13 @@
         transition-duration: 0.4s;
         cursor: pointer;
         box-shadow:0 8px 16px 0 rgba(0,0,0,0.6)
+        flexbox
     }
     .btn-container{
         height: 100%;
         position: relative;
         border: 3px rgb(0, 0, 0);
+        justify-content: space-evenly;
     }
     .btn-center{
         margin: 0;
