--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,11 @@
     align-items: center;
 }          
 
+.video{
+    width: 100%;
+    height: auto;
+}
+
 h1{
     text-align: center;
     color: white;
